refactor(core): 优化代码实现并更新依赖